# MiniTensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
include/: Tensor.h
src/: MiniTensor.cpp  Tensor.cpp
tests/: test_tensor.cpp
